--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,8 @@
 {% extends "base.html" %}
-{% import "macros.html" as macros %}
 
-{%- block main_content %}
+{% block main_content %}
 <div class="page-content">
-    {{ macros::page_header(title=section.title) }}
+    <h1>{{ section.title }}</h1>
     {{ section.content | safe }}
 </div>
-{%- endblock main_content %}
+{% endblock %}
