--- a/templates/resume.html
+++ b/templates/resume.html
@@ -1,15 +1,9 @@
 {% extends "base.html" %}
-{% import "macros.html" as macros %}
 
-{%- block main_content %}
-<div class="page-content">
-    {{ macros::page_header(title=section.title) }}
-    {{ section.content | safe }}
-
-    <div class="resume-container">
-        <object data="/resume/Meng_Resume.pdf" type="application/pdf" width="100%" height="800px">
-            <p>My resume can be downloaded <a href="/resume/Meng_Resume.pdf">here</a>.</p>
-        </object>
-    </div>
+{% block main_content %}
+<div class="resume-container">
+    <object data="/resume.pdf" type="application/pdf" width="100%" height="800px">
+        <p>Unable to display PDF file. <a href="/resume.pdf">Download</a> instead.</p>
+    </object>
 </div>
-{%- endblock main_content %} 
+{% endblock %} 
